--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="about_android">%1$s Android App</string>
+    <string name="about_android" translatable="false">%1$s - T.net Italia S.p.A.</string>
     <string name="about_version">version %1$s</string>
     <string name="actionbar_sync">Refresh account</string>
     <string name="actionbar_upload">Upload</string>
